--- a/client/styles/modules/Header.module.css
+++ b/client/styles/modules/Header.module.css
@@ -6,7 +6,7 @@
   height: var(--height-3);
   color: var(--colors-black);
   padding: var(--spacer-1);
-  margin: 0;
+  margin: 0 0 var(--spacer-1);
 }
 
 .header_wrapper > span,
@@ -55,9 +55,9 @@
 }
 
 @media all and (min-width: 1400px) {
-  /* .header_wrapper {
-    margin: var(--spacer-2) var(--spacer-3);
-  } */
+  .header_wrapper {
+    margin-bottom: var(--spacer-5);
+  }
   .title {
     width: 100%;
     max-width: unset;
